--- a/latex/Mathematics/数学分析/1.tex
+++ b/latex/Mathematics/数学分析/1.tex
@@ -17,14 +17,19 @@
 	\end{definition}%定理的模板
 需要额外介绍的是笛卡尔直积.对于任何两个集合$A,B$，可以做成一个新的集合——偶$\{A,B\}=\{B,A\}$，其元素是且仅是集合A和B.这个集合在$A\neq B$时，由两个元素组成，而在$A=B$的时候由一个元素组成。\\
 
-上述新集合称为集合A和集合B的无序偶，以区别于序偶$(A,B)$，后者的元素
+上述新集合称为集合A和集合B的无序偶，以区别于序偶$(A,B)$，后者的元素$A$,$B$具有附加特征，从而能够区别偶$(A,B)$中第一个元素和第二个元素。按照定义，序偶等式
+\[(A,B)=(C,D)\]
+表示$A=C$且$B=D$，特别地，如果$A\neq B$,则$(A,B)\neq (B,A)$。
+
+现在设$X,Y$是任意集合，集合
+\[X\times Y:=\{(x,y)|x\in X,y\in Y\}\]
 
 \section{函数与极限}
 第一讲要讨论的是两个基本概念，分别是函数和极限，函数是微积分学的研究对象，极限是我们学习的工具。在学习过程中我们通常先学习极限以及实数的定义，再由此衍生到微积分。而事实上这一顺序与数学发展的顺序并不相同，牛顿莱布尼茨分别发明了微积分，而在后面若干年各学者的补充完善下才确定了实数与极限的概念。
 \subsection{函数}
-设$X$和$Y$是两集合
-
-如果集合$X$的每一个元素$x$都按照某规律$f$与集合$Y$的元素$y$相对应，我们就说有一个函数，它定义于$X$并且取值于$Y$。
+\begin{definition}{函数}{}
+设$X$和$Y$是两集合，如果集合$X$的每一个元素$x$都按照某规律$f$与集合$Y$的元素$y$相对应，我们就说有一个函数，它定义于$X$并且取值于$Y$。
+\end{definition}
 \subsubsection{映射的简单分类}
 当函数$f:X\rightarrow Y$被称为映射的时候，它在元素$x\in X$上的值$f(x)\in Y$通常称为元素$x$的像。
 映射$f:X\rightarrow Y$分为以下几类：
@@ -39,8 +44,9 @@
 \[f^{-1}:Y\rightarrow X\]
 其定义方法如下：如果$f(x)=y$，则$f^{-1}:Y\rightarrow x$，即元素$y\in Y$相对应的是在映射$f$下以$y$为像的元素$x\in X$，因为f是满射，所以这样的元素x存在。又因为f是单射，所以该元素是唯一的。因此，我们可以定义映射$f^{-1}$，这个映射称为原映射逆映射。
 \subsection{集合的势}
+\begin{definition}{集合的势}{}
 如果集合$X$到集合$Y$的双射存在，称集合$X$与集合$Y$等势
-
+\end{definition}
 集合X所在的类称为集合X的势或基数类，记为$cardX$，如果$X~Y$，即可以写出$cardX=cardY$。
 
 这种结构的意义在于，它能够让我们比较集合中所含元素的数量，而不必采用数数的方式，事实上后者在一些情况是不可能完成的。
