--- a/latex/Mathematics/数学分析/1.tex
+++ b/latex/Mathematics/数学分析/1.tex
@@ -23,6 +23,14 @@
 
 现在设$X,Y$是任意集合，集合
 \[X\times Y:=\{(x,y)|x\in X,y\in Y\}\]
+称为集合$X$和集合$Y$的笛卡尔积，或者直积。笛卡尔积的元素是所有可能的序偶$(x,y)$，其中$x\in X,y\in Y$。
+
+从直积的定义和关于序偶的可以看出，一般上述说明而言，$X\times Y\neq Y\times X$，除非$X=Y$，此时$X\times X$简写为$X^2$。
+
+在平面上众所周知的笛卡尔坐标系恰好把该平面变为两个数轴的直积，在这个熟悉的情形下笛卡尔积对因子顺序的依赖性明显表现出来。
+
+设序偶$z=(x_1,x_2)$是集合$X_1$与$X_2$的直积$Z=X_1\times X_2$中的元素，则$x_1$称为序偶$z$的第一投影，记作$pr_1z$；$x_2$称为序偶$z$的第二投影，记作$pr_2z$。我们可以用投影映射来定义直积的两个映射
+
 
 \section{函数与极限}
 第一讲要讨论的是两个基本概念，分别是函数和极限，函数是微积分学的研究对象，极限是我们学习的工具。在学习过程中我们通常先学习极限以及实数的定义，再由此衍生到微积分。而事实上这一顺序与数学发展的顺序并不相同，牛顿莱布尼茨分别发明了微积分，而在后面若干年各学者的补充完善下才确定了实数与极限的概念。
