--- a/latex/Mathematics/高等代数/main.tex
+++ b/latex/Mathematics/高等代数/main.tex
@@ -3,11 +3,14 @@
 % 如果需要中文支持,请将 \documentclass{MathNote} 替换为 \documentclass{MathNoteCN}
 
 \documentclass{MathNoteCN}
-
+\usepackage{amsmath}
 \title{ \LaTeX 高等代数本科笔记}
 \author{Felix H.}
 \begin{document}
 \maketitle
+\section{高等代数}
+代数空间对应了多元函数，其中交换律，结合律，零元等在多元函数中的概念体现的是代数空间的对称性
 \input{1.tex}
+\input{23.tex}
 
 \end{document}
