--- a/latex/Mathematics/高等代数/1.tex
+++ b/latex/Mathematics/高等代数/1.tex
@@ -1,12 +1,4 @@
-\section{Gauss-Jordan算法}
-\begin{definition}{n元线性方程组}{}
-  \[\begin{cases}
-     a_{11} x_1+a_{12} x_2+...+a_{1n} x_n\\
-     a_{21} x_1+a_{22} x_2+...+a_{2n} x_n\\
-     ............\\
-     a_{m1} x_1+a_{m2} x_2+...+a_{mn} x_n
-  \end{cases}\]
-\end{definition}
+\section{行列式}
 
 
 
