--- a/latex/Mathematics/高等代数/main.tex
+++ b/latex/Mathematics/高等代数/main.tex
@@ -3,7 +3,11 @@
 % 如果需要中文支持,请将 \documentclass{MathNote} 替换为 \documentclass{MathNoteCN}
 
 \documentclass{MathNoteCN}
-\usepackage{amsmath}
+\usepackage{graphicx}%可以加图片
+\usepackage{physics2}
+\usephysicsmodule{ab}
+\usepackage{amssymb}
+\usepackage{mathtools}
 \title{ \LaTeX 高等代数本科笔记}
 \author{Felix H.}
 \begin{document}
